<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:layout_margin="16dp"
    android:orientation="vertical"
    android:weightSum="1.0"
    xmlns:android="http://schemas.android.com/apk/res/android">

    <ImageView
        android:layout_width="match_parent"
        android:layout_height="150dp"
        android:scaleX="0.75"
        android:scaleY="0.75"
        android:layout_weight="0.4"
        android:contentDescription="@string/sirenContentDesc"
        android:src="@drawable/siren" />

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_gravity="bottom"
        android:layout_weight="0.2"
        android:gravity="center|top"
        android:text="@string/app_name"
        android:textAppearance="@style/TextAppearance.AppCompat.Title" />


    <Button
        android:id="@+id/contactsButton"
        android:layout_width="200dp"
        android:layout_height="0dp"
        android:layout_gravity="center"
        android:onClick="onClick"
        android:layout_weight="0.2"
        android:layout_margin="16dp"
        android:text="@string/contactsButtonText" />

    <Button
        android:id="@+id/messagesButton"
        android:layout_width="200dp"
        android:layout_height="0dp"
        android:layout_gravity="center"
        android:onClick="onClick"
        android:layout_weight="0.2"
        android:layout_margin="16dp"
        android:text="@string/messageButtonText" />
</LinearLayout>