<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:weightSum="1.0"
    android:layout_margin="16dp"
    android:orientation="vertical"
    tools:context=".MessageActivity">

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginBottom="16dp"
        android:layout_weight="0.5"
        android:text="@string/messageActivityInfo"
        android:textAppearance="@style/TextAppearance.AppCompat.Large" />

    <RadioGroup
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_weight="0.4"
        android:layout_marginBottom="16dp"
        android:id="@+id/messageGroup">

        <RadioButton
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/rb1"
            android:checked="true"
            android:onClick="setChecked"
            android:text="@string/emergencyMessage1" />

        <RadioButton
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/rb2"
            android:onClick="setChecked"
            android:text="@string/emergencyMessage2" />

        <RadioButton
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:onClick="setChecked"
            android:id="@+id/customMessage"
            android:visibility="invisible"/>
    </RadioGroup>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_weight="0.1"
        android:layout_marginBottom="24dp"
        android:orientation="horizontal">

        <EditText
            android:id="@+id/message"
            android:layout_width="200dp"
            android:layout_height="wrap_content"
            android:layout_marginEnd="16dp"
            android:layout_marginRight="16dp"
            android:hint="@string/addMessageHint"
            android:inputType="text" />

        <Button
            android:id="@+id/addMessageButton"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:onClick="addMessage"
            android:text="@string/addMessageButtonText" />
    </LinearLayout>
</LinearLayout>